//
//  Localizable.strings (English)
//  JudoKitObjC
//
//  Copyright (c) 2016 Alternative Payments Ltd
//
//  Permission is hereby granted, free of charge, to any person obtaining a copy
//  of this software and associated documentation files (the "Software"), to deal
//  in the Software without restriction, including without limitation the rights
//  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
//  copies of the Software, and to permit persons to whom the Software is
//  furnished to do so, subject to the following conditions:
//
//  The above copyright notice and this permission notice shall be included in all
//  copies or substantial portions of the Software.
//
//  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
//  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
//  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
//  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
//  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
//  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
//  SOFTWARE.

//General
"ok" = "OK";
"error" = "Error";
"cancel" = "Cancel";
"delete" = "Delete";

//Add Card
"scan_card" = "SCAN CARD";
"card_number" = "Card Number";
"cardholder_name" = "Cardholder Name";
"expiry_date" = "MM/YY";
"country" = "Country";
"postal_code" = "Postcode";
"secure_code" = "CVV";
"add_card_button" = "ADD CARD";
"invalid_expiry_date_value" = "Invalid date value entered";
"invalid_postcode" = "Invalid postcode entered";
"invalid_zip_code" = "Invalid ZIP code entered";

//Scan Card
"scan_card_message_title" = "Position card in this frame";
"scan_card_message_subtitle" = "We will automatically scan it";
"scan_card_no_permission_title" = "Camera permissions not granted";
"scan_card_no_permission_message" = "In order to scan your card, please open settings and grant %@ access to your Camera";
"scan_card_restricted_title" = "Camera access restricted";
"scan_card_restricted_message" = "Scan camera functionality is not available due to restriction on your device";
"scan_card_simulator_title" = "Camera not available on iOS simulators";
"scan_card_confirm" = "Got it";
"scan_card_go_to_settings" = "Go to Settings";

//Payment Method Screen
"card_subtitle" = "%@ Ending %@";
"no_connected_cards" = "You didn't connect any cards yet";
"connected_cards" = "Connected cards";
"edit_capitalized" = "EDIT";
"done_capitalized" = "DONE";
"pay_now_capitalized" = "PAY NOW";
"choose_payment_method" = "Choose a Payment Method";
"no_cards_added"  = "You didn’t add any cards yet.\nAdd one right now or use any of the payment methods below";
"you_will_pay" = "You will pay";
"card_transaction_unsuccesful_error" = "Card transaction unsuccessful - please try again";
"delete_card_alert_title" = "Delete Card ?";
"delete_card_alert_message" = "Are you sure you want to delete this card from your wallet?";
"expired" = "Expired";
"is_expired" = "is Expired";
"will_expire_soon" = "will expire soon";
"expire_soon" = "expire soon";

//CardInputField
"card_number_label" = "Card number";
"long_card_number" = "Long card number";

//SecurityCodeInputField
"please_reenter_the_card_security_code" = "Re-enter security code";
"security_code" = "Security code";

//IssueNumberInputField
"issue_number_label" = "Issue number";
"issue_number_front_of_card" = "Issue number on front of card";

//DateInputField
"check_expiry_date" = "Check expiry date";
"check_start_date" = "Check start date";
"start_date_label" = "Start date";
"expiry_date_label" = "Expiry date";
"date_hint" = "MM/YY";
"date_format" = "MM/yy";

//PostcodeInputField
"billing_postcode" = "Billing postcode";
"billing_zip_code" = "Billing ZIP code";
"billing_postal_code" = "Billing postal code";

//JPBillingCountryInputField
"country_uk" = "UK";
"country_usa" = "USA";
"country_canada" = "Canada";
"country_other" = "Other";

//IDEALFormViewController
"ideal_transaction" = "iDEAL Transaction";
"selected_bank" = "Selected bank:";
"select_ideal_bank" = "Select iDEAL bank";
"enter_name" = "Enter name";
"name" = "Name";
"select_bank" = "Select %@ as your iDEAL bank";
"ideal_transaction_success" = "Transaction success!";
"ideal_transaction_pending" = "Transaction pending...";
"ideal_transaction_pending_delay" = "This is taking longer than expected. Please wait...";
"ideal_transaction_timeout" = "The transaction has timed out!";
"ideal_transaction_error" = "Oops! Something went wrong.";
"ideal_transaction_failed" = "Transaction failed!";
"retry" = "Retry";
"close" = "Close";

//JudoPayViewController
"secure_server" = "Secure server: ";
"pay" = "Pay";
"check_card" = "Check Card";
"add_card" = "Add Card";

//NSError+Additions
"unable_to_process_request_error_desc" = "Sorry, we're currently unable to process this request.";
"unable_to_process_request_error_title" = "Unable to process";
"error_request_failed" = "The request responded without data";
"error_payment_method_missing" = "The payment method (card details, token or PKPayment) has not been set for a transaction that requires it (custom UI)";
"error_amount_missing" = "The amount has not been set for a transaction that requires it (custom UI)";
"error_reference_missing" = "The reference has not been set for a transaction that requires it (custom UI)";
"error_response_parse_error" = "An error with a response from the backend API";
"error_user_did_cancel" = "Received when user cancels the payment journey";
"error_parameter_error" = "A parameter entered into the dictionary (request body to Judo API) is not set";
"error_failed_3DS_request" = "After receiving the 3DS payload, when the payload has faulty data, the WebView fails to load the 3DS Page or the resolution page";
"error_jailbroken_device_disallowed" = "The device the code is currently running is jailbroken. Jailbroken devices are not allowed when instantiating a new Judo session";
"error_3DS_request" = "Error when routing to 3DS";
"error_underlying_error" = "An error in the iOS system with an enclosed underlying error";
"error_transaction_declined" = "A transaction that was sent to the backend returned declined";
"error_checksum_missing_title" = "Checksum missing";
"error_checksum_missing_description" = "No checksum parameter present in iDEAL redirect URL";
"error_timeout_title" = "Request has timed out";
"error_timeout_description" = "Request did not complete in the specified time";
"no_internet_error_description" = "Please check your internet connection and try again.";
"no_internet_error_title" = "No internet connection!";
"error_unsupported_card_network_desc" = "%@ is not supported";
"error_unsupported_card_network_title" = "Card type is not supported";
"error_token_missing" = "The card token could not be retrieved from the response";

//NSString+Card
"check_card_number" = "Check card number";
"error_card_not_supported" = "We do not accept %@";

//JPTheme
"add_card" = "Add card";
"add" = "Add";
"back" = "Back";
"payment" = "Payment";
"refund" = "Refund";
"authentication" = "Authentication";
"adding_card" = "Adding card...";
"processing_payment" = "Processing payment...";
"redirecting" = "Redirecting...";
"verifying_payment" = "Verifying payment";
"verifying_card" = "Verifying card";
"secure_server_transmission" = "Your card details are encrypted using SSL before transmission to our secure payment service provider.";

//Customize Card
"customize_card" = "Customize Card";
"enter_card_title" = "Enter a card title...";
"card_title_length_warning" = "Card Name cannot be longer than 28 characters";
"default_visa_card_title" = "My VISA Card";
"default_mastercard_card_title" = "My MasterCard Card";
"default_maestro_card_title" = "My Maestro Card";
"default_amex_card_title" = "My American Express Card";
"default_jcb_card_title" = "My JCB Card";
"default_chinaunionpay_card_title" = "My China Union Pay Card";
"default_discover_card_title" = "My Discover Card";
"default_dinnersclub_card_title" = "My Dinners Club Card";
"save_as_default" = "Save as default payment method";
"save" = "Save";

//Payment Methods
"apple_pay" = "Apple Pay";
