...
                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                <items>
                                    <barButtonItem style="plain" id="dxq-f4-2T8">
                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="FOm-Z2-EhH">
                                            <rect key="frame" x="20" y="7" width="57" height="30"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <state key="normal" title="Settings"/>
                                            <connections>
                                                <action selector="settingsButtonHandler:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2pn-Od-Iea"/>
                                            </connections>
                                        </button>
                                    </barButtonItem>
                                </items>
...
